--- a/cadastro.html
+++ b/cadastro.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Trabalho Faculdade Site/style2.css">
+    <link rel="stylesheet" href="../style2.css">
     <title>Formulário</title>
 </head>
 <body>
     <div class="container">
         <div class="form-image">
-            <img src="../Trabalho Faculdade Site/Imagens/cadastro.img.svg" alt="" width="100%" height="100%">
+            <img src="../Imagens/cadastro.img.svg" alt="" width="100%" height="100%">
         </div>
         <div class="form">
             <form action="#">
