--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                               <a class="nav-link" href="cadastro.html">Cadastro</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="#">Troca</a>
+                              <a class="nav-link" href="troca.html">Troca</a>
                             </li>
                           </div>
                     </ul>
