--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <img class="logoAgr" src="Imagens/logo1-removebg-preview.png" alt="">
                           <div class="d-flex textos-header">
                             <li class="nav-item" id="names">
-                              <a class="nav-link active" href="#inicio">Início</a>
+                              <a class="nav-link active" href="index.html">Início</a>
                             </li>
                             <li class="nav-item">
                               <a class="nav-link" href="cadastro.html">Cadastro</a>
@@ -52,7 +52,7 @@
                           <h5 class="card-title">A revolução dos bichos: Um conto de fadas
                           </h5>
                           <p class="card-text">A revolução dos bichos é uma fábula sobre o poder. Narra a insurreição dos animais de uma granja contra seus donos. </p>
-                          <a href="#" class="btn btn-success">Ver mais</a>
+                          <a href="revoluçao.html" class="btn btn-success">Ver mais</a>
                         </div>
                       </div>
                     </div>
@@ -62,7 +62,7 @@
                         <div class="card-body">
                           <h5 class="card-title">Cem dias entre céu e mar</h5>
                           <p class="card-text">cem dias entre céu e mar é o relato de uma travessia absolutamente incomum: mais de 3500 milhas, no sul da África, até a praia da Espera no litoral baiano</p>
-                          <a href="#" class="btn btn-success">Ver mais</a>
+                          <a href="cemdias.html" class="btn btn-success">Ver mais</a>
                         </div>
                       </div>
                     </div>
@@ -72,7 +72,7 @@
                         <div class="card-body">
                           <h5 class="card-title">O Código Da Vinci</h5>
                           <p class="card-text">Perfeito para entusiastas de história, amantes de quebra-cabeças, loucos por conspiração e qualquer um que aprecie uma narrativa instigante.</p>
-                          <a href="#" class="btn btn-success">Ver mais</a>
+                          <a href="davinci.html" class="btn btn-success">Ver mais</a>
                         </div>
                       </div>
                     </div>
@@ -86,7 +86,7 @@
                             <div class="card-body">
                               <h5 class="card-title">O monge e o executivo: Uma história sobre a essência da liderança</h5>
                               <p class="card-text">O Monge e o Executivo contém tesouros que irão transformar a sua vida.</p>
-                              <a href="#" class="btn btn-success">Ver mais</a>
+                              <a href="monge.html" class="btn btn-success">Ver mais</a>
                             </div>
                           </div>
                         </div>
@@ -96,7 +96,7 @@
                             <div class="card-body">
                               <h5 class="card-title">Alice no País das Maravilhas Contado tipo aos jovens</h5>
                               <p class="card-text">Será um sonho, ou o País das Maravilhas existe mesmo? Lê-me e vais ver que cresces. </p>
-                              <a href="#" class="btn btn-success">Ver mais</a>
+                              <a href="alice.html" class="btn btn-success">Ver mais</a>
                             </div>
                           </div>
                         </div>
@@ -106,7 +106,7 @@
                             <div class="card-body">
                               <h5 class="card-title">O Pequeno Príncipe</h5>
                               <p class="card-text">O pequeno príncipe é uma obra atemporal, com metáforas pertinentes e aprendizados sobre afeto, sonhos, esperança e tudo aquilo que é invisível aos olhos. </p>
-                              <a href="#" class="btn btn-success">Ver mais</a>
+                              <a href="principe.html" class="btn btn-success">Ver mais</a>
                             </div>
                           </div>
                         </div>
@@ -123,11 +123,11 @@
             <footer>
               <div>
                 <img  class="imgInsta" src="Imagens/wpp.png" alt="">
-                 <a href="">+00 (00) 000000000</a>
+                 <a href="">+55 (61) 000000000</a>
               </div> 
                  
               <img style="margin-left: 1%; margin-top: 0.5%;" class="imgInsta" src="Imagens/gmail new.png" alt="">
-                <a href="">userName@gmail.com</a>
+                <a href="">joaolucasdoidaobr@sempreceub.com</a>
             </footer>
 
 
